// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SizedContainer /> renders the component with default props 1`] = `
.c0 {
  max-width: 100%;
  width: 100%;
}

<div
  class="c0"
>
  Container
</div>
`;

exports[`<SizedContainer /> renders the component with sizes props 1`] = `
.c0 {
  max-width: 148px;
  width: 100%;
}

<div
  class="c0"
>
  Container
</div>
`;

exports[`<SizedContainer /> renders the component with sizes props 2`] = `
.c0 {
  max-width: 336px;
  width: 100%;
}

<div
  class="c0"
>
  Container
</div>
`;

exports[`<SizedContainer /> renders the component with sizes props 3`] = `
.c0 {
  max-width: 222px;
  width: 100%;
}

<div
  class="c0"
>
  Container
</div>
`;

exports[`<SizedContainer /> renders the component with sizes props 4`] = `
.c0 {
  max-width: 100%;
  width: 100%;
}

<div
  class="c0"
>
  Container
</div>
`;
